--- a/assets/produtos.html
+++ b/assets/produtos.html
@@ -81,7 +81,7 @@
 
         <p>Email: joabe.albino@escola.pr.gov.br</p>
 
-        <center><a href="">Créditos</a></center>
+        <center><a href="../assets/creditos.html">Créditos</a></center>
 
         <div class="patrocinio">
             <a href="https://www.sistemafaep.org.br/agrinho/">Agrinho</a>
