--- a/assets/maquinas.html
+++ b/assets/maquinas.html
@@ -9,9 +9,7 @@
 <body>
     <header>
         <a href="https://www.sistemafaep.org.br/agrinho/"><img src="../imgs/download.jpeg" alt="Site agrinho"></a>
-        <div class="titulo"><h1>Agrinho: Máquinas Agrícolas</h1></div>
-        
-        <a href="../index.html" class="Home">Home</a>
+        <div class="titulo"><h1><a href="../index.html">Agrinho: Máquinas Agrícolas</a></h1></div>
 
 
         <nav>
@@ -53,7 +51,7 @@
         <h2>Trator</h2>
         <p>Sua função é fornecer propulsão motorizada aos implementos que realizam algum tipo de trabalho mais específico, como arar, cultivar e plantas campos, tendo os mais modernos a capacidade também de cuidar da rotina de gramados, da manutenção de paisagem e de espalhar fertilizantes em arbustos.</p>
 
-        <center><img src="../imgs/trator.png" alt="Imagem de um Trator"></center>
+        <center><img src="../imgs/trator.jpg" alt="Imagem de um Trator"></center>
         <br><br>
 
         <div id="colheitadeira"></div>
@@ -87,13 +85,13 @@
         <center><a href="../assets/creditos.html">Créditos</a></center>
 
         <div class="patrocinio">
-            <a href="https://www.sistemafaep.org.br/agrinho/">Agrinho</a>
+            <a href="https://www.sistemafaep.org.br/agrinho/"><img src="../imgs/agrinho.jpeg" alt="Site agrinho"></a>
 
-            <a href="https://www.sistemafaep.org.br/">FAEP</a>
+            <a href="https://www.sistemafaep.org.br/"><img src="../imgs/faep.jpeg" alt="Site Faep"></a>
 
-            <a href="https://ead.senar.org.br/matriculas-abertas?utm_source=google&utm_medium=cpc&utm_campaign=ga-conversao-matriculas-abertas&utm_source=google&utm_medium=cpc&utm_campaign=DOT-SENARNA_matriculas-abertas&gad_source=1&gclid=Cj0KCQjwh7K1BhCZARIsAKOrVqHfOJs4cwRVnwjRHflZDnmC2ER4mwlxC94KKvRSOkHSaZpNcmfCzJIaAgOzEALw_wcB">Senar</a>
+            <a href="https://ead.senar.org.br/matriculas-abertas?utm_source=google&utm_medium=cpc&utm_campaign=ga-conversao-matriculas-abertas&utm_source=google&utm_medium=cpc&utm_campaign=DOT-SENARNA_matriculas-abertas&gad_source=1&gclid=Cj0KCQjwh7K1BhCZARIsAKOrVqHfOJs4cwRVnwjRHflZDnmC2ER4mwlxC94KKvRSOkHSaZpNcmfCzJIaAgOzEALw_wcB"><img src="../imgs/senar.jpeg" alt="Site senar"></a>
 
-            <a href="https://www.nre.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=935">NRE Cascavel</a>
+            <a href="https://www.nre.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=935"><img src="../imgs/nre.jpeg" alt="Site NRE Cascavel"></a>
 
         </div>
     </footer>
