--- a/assets/produtos.html
+++ b/assets/produtos.html
@@ -9,9 +9,7 @@
 <body>
     <header>
         <a href="https://www.sistemafaep.org.br/agrinho/"><img src="../imgs/download.jpeg" alt="Site agrinho"></a>
-        <div class="titulo"><h1>Agrinho: Produtos Agrícolas</h1></div>
-        
-        <a href="../index.html" class="Home">Home</a>
+        <div class="titulo"><h1><a href="../index.html">Agrinho: Produtos Agrícolas</a></h1></div>
 
 
         <nav>
@@ -53,7 +51,7 @@
         <h2>Cana-de-açúcar</h2>
         <p> A cana-de-açúcar é o primeiro produto cultivado em larga escala na história da agricultura brasileira. Foi um sistema de plantio estabelecido pelos portugueses no país durante o período colonial, principalmente na região Nordeste. Naquela época, o objetivo do cultivo era produzir açúcar para venda no mercado externo. Atualmente, além desta mercadoria, a cana-de-açúcar é utilizada para a produção de etanol, cuja importância econômica e política ganha cada vez mais destaque no contexto geopolítico internacional dos combustíveis e da energia.</p>
 
-        <center><img src="../imgs/cana.png" alt="Foto de Cana-de-açúcar"></center> <br><br>
+        <center><img src="../imgs/cana.jpg" alt="Foto de Cana-de-açúcar"></center> <br><br>
 
         <div id="cafe"></div>
         <h2>Café</h2>
@@ -84,13 +82,13 @@
         <center><a href="../assets/creditos.html">Créditos</a></center>
 
         <div class="patrocinio">
-            <a href="https://www.sistemafaep.org.br/agrinho/">Agrinho</a>
+            <a href="https://www.sistemafaep.org.br/agrinho/"><img src="../imgs/agrinho.jpeg" alt="Site agrinho"></a>
 
-            <a href="https://www.sistemafaep.org.br/">FAEP</a>
+            <a href="https://www.sistemafaep.org.br/"><img src="../imgs/faep.jpeg" alt="Site Faep"></a>
 
-            <a href="https://ead.senar.org.br/matriculas-abertas?utm_source=google&utm_medium=cpc&utm_campaign=ga-conversao-matriculas-abertas&utm_source=google&utm_medium=cpc&utm_campaign=DOT-SENARNA_matriculas-abertas&gad_source=1&gclid=Cj0KCQjwh7K1BhCZARIsAKOrVqHfOJs4cwRVnwjRHflZDnmC2ER4mwlxC94KKvRSOkHSaZpNcmfCzJIaAgOzEALw_wcB">Senar</a>
+            <a href="https://ead.senar.org.br/matriculas-abertas?utm_source=google&utm_medium=cpc&utm_campaign=ga-conversao-matriculas-abertas&utm_source=google&utm_medium=cpc&utm_campaign=DOT-SENARNA_matriculas-abertas&gad_source=1&gclid=Cj0KCQjwh7K1BhCZARIsAKOrVqHfOJs4cwRVnwjRHflZDnmC2ER4mwlxC94KKvRSOkHSaZpNcmfCzJIaAgOzEALw_wcB"><img src="../imgs/senar.jpeg" alt="Site senar"></a>
 
-            <a href="https://www.nre.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=935">NRE Cascavel</a>
+            <a href="https://www.nre.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=935"><img src="../imgs/nre.jpeg" alt="Site NRE Cascavel"></a>
 
         </div>
     </footer>
