--- a/assets/produtos.html
+++ b/assets/produtos.html
@@ -82,13 +82,13 @@
         <center><a href="../assets/creditos.html">Créditos</a></center>
 
         <div class="patrocinio">
-            <a href="https://www.sistemafaep.org.br/agrinho/"><img src="../imgs/agrinho.jpeg" alt="Site agrinho"></a>
+            <a href="https://www.ceepcascavel.com.br/"><img src="../imgs/ceep_menor.jpg" alt="Site CEEP"></a>
 
-            <a href="https://www.sistemafaep.org.br/"><img src="../imgs/faep.jpeg" alt="Site Faep"></a>
+                <a href="https://www.sistemafaep.org.br/"><img src="../imgs/faep.jpeg" alt="Site Faep"></a>
 
-            <a href="https://ead.senar.org.br/matriculas-abertas?utm_source=google&utm_medium=cpc&utm_campaign=ga-conversao-matriculas-abertas&utm_source=google&utm_medium=cpc&utm_campaign=DOT-SENARNA_matriculas-abertas&gad_source=1&gclid=Cj0KCQjwh7K1BhCZARIsAKOrVqHfOJs4cwRVnwjRHflZDnmC2ER4mwlxC94KKvRSOkHSaZpNcmfCzJIaAgOzEALw_wcB"><img src="../imgs/senar.jpeg" alt="Site senar"></a>
+                <a href="https://ead.senar.org.br/matriculas-abertas?utm_source=google&utm_medium=cpc&utm_campaign=ga-conversao-matriculas-abertas&utm_source=google&utm_medium=cpc&utm_campaign=DOT-SENARNA_matriculas-abertas&gad_source=1&gclid=Cj0KCQjwh7K1BhCZARIsAKOrVqHfOJs4cwRVnwjRHflZDnmC2ER4mwlxC94KKvRSOkHSaZpNcmfCzJIaAgOzEALw_wcB"><img src="../imgs/senar.jpeg" alt="Site senar"></a>
 
-            <a href="https://www.nre.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=935"><img src="../imgs/nre.jpeg" alt="Site NRE Cascavel"></a>
+                <a href="https://www.nre.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=935"><img src="../imgs/nre.jpeg" alt="Site NRE Cascavel"></a>
 
         </div>
     </footer>
