--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <button><a href="#maquinas">máquinas agrícolas</a></button>
                 <button><a href="#produtos">produtos agrícolas do Paraná</a></button>
                 <button><a href="#tecnologias">Técnologias no mundo agrícola</a></button>
+                <button><a href="#farm">Smart-Farm</a></button>
 
                 <div class="btn">
                     <input type="checkbox" name="" id="preto">
@@ -154,10 +155,10 @@
 
             <div class="carrosel">
                 <div class="wrap">
-                    <img src="imgs/smart-farm-1.jpg" alt="Tecnologias no campo" width="600px" height="400px">
-                    <img src="imgs/smart-farm-2.jpg" alt="Tecnologias no campo" width="600px" height="400px">
-                    <img src="imgs/smart-farm-3.jpg" alt="Tecnologias no campo" width="600px" height="400px">
-                    <img src="imgs/smart-farm-4.jpg" alt="Tecnologias no campo" width="600px" height="400px">
+                    <img src="imgs/smart-farm-1.jpg" alt="Smart-farm" width="600px" height="400px">
+                    <img src="imgs/smart-farm-2.jpg" alt="Smart-farm" width="600px" height="400px">
+                    <img src="imgs/smart-farm-3.jpg" alt="Smart-farm" width="600px" height="400px">
+                    <img src="imgs/smart-farm-4.jpg" alt="Smart-farm" width="600px" height="400px">
                 </div>
             </div>
         </div>
